7468: Loading / status icon wrapping fix

--- a/app/assets/stylesheets/all/components/_main.scss
+++ b/app/assets/stylesheets/all/components/_main.scss
@@ -224,6 +224,8 @@ div.regenerable-field {
 
   div.loading_indicator {
     margin-left: 0.5em;
+    width: 20px;
+    display: inline-block;
   }
 }
 
